fix (body): no overflow x

--- a/src/css/_base.sass
+++ b/src/css/_base.sass
@@ -21,6 +21,7 @@ body
     padding: 0
     background-color: $color-d
     font-family: 'Overpass', sans-serif
+    overflow-x: hidden
 
 #root
     overflow-x: hidden
