--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,6 +16,7 @@ body {
   padding: 0;
   background-color: #2C3333;
   font-family: "Overpass", sans-serif;
+  overflow-x: hidden;
 }
 
 #root {
